# balance-score

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/specs/: architecture.md
examples/: CMakeLists.txt  demo.py  main.cpp
include/balance_score/: balance_score_c.h  export.h  health.h
src/: CMakeLists.txt  health.cpp  placeholder.cpp
tests/: CMakeLists.txt  health_test.cpp  placeholder_test.cpp
